src/snapshots/lazier__app__tests__new_worktree_window.snap
---
source: src/app.rs
expression: "draw(&app, 100, 30).backend()"
---
"┌[1]─Status───────────────────────┐┌[0]─Changes────────────────────────────────────────────────────┐"
"│main ↑2                          ││── Unstaged changes ───────────────────────────────────────────│"
"└───────────────────────────1 of 1┘│diff --git a/src/main.rs b/src/main.rs                         │"
"┌[2]─Files────────────────────────┐│+added line                                                    │"
"│   ▾ /                           ││-removed line                                                  │"
"│ ?   notes.txt                   ││── Staged changes ─────────────────────────────────────────────│"
"│     ▾ src/                      ││diff --git a/src/main.rs b/src/main.rs                         │"
"│ A     app.rs                    ││+staged line                                                   │"
"│MM     main┌ New worktree ────────────────────────────────────────────────────────────┐           │"
"└───────────│┌branch (a new one)──────────────────────────────────────────────────────┐│           │"
"┌[3]─Branche││feature/parser▏                                                         ││           │"
"│  2h * main│└────────────────────────────────────────────────────────────────────────┘│           │"
"│  1d   feat│┌path────────────────────────────────────────────────────────────────────┐│           │"
"│  3w   old/││                                                                        ││           │"
"│           │└────────────────────────────────────────────────────────────────────────┘│           │"
"└───────────│ The worktree will make this branch.                                      │           │"
"┌[4]─Commits│                                                                          │           │"
"│0a0c000 TA │                                                                          │           │"
"│0a0c001 TA │Make it: <enter> | Other field: <tab> | Cancel: <esc>                     │           │"
"│0a0c002 TA └──────────────────────────────────────────────────────────────────────────┘           │"
"│0a0c003 TA │ ● fake: commit subje││                                                               │"
"│0a0c004 TA ●─╯ fake: commit subje││                                                               │"
"└──────────────────────1 of 100000┘└───────────────────────────────────────────────────────────────┘"
"┌[5]─Stash────────────────────────┐┌[@]─Command log────────────────────────────────────────────────┐"
"│stash@{0}: WIP on main           ││                                                               │"
"│                                 ││                                                               │"
"│                                 ││                                                               │"
"│                                 ││                                                               │"
"└───────────────────────────1 of 1┘└───────────────────────────────────────────────────────────────┘"
"                                                                                                    "
