src/snapshots/lazier__app__tests__rebase_editor.snap
---
source: src/app.rs
expression: "draw(&app, 100, 24).backend()"
---
"┌[1]─Status───────────────────────┐┌Interactive rebase — enter: run, esc: cancel───────────────────┐"
"│main (no upstream) ↑2            ││pick   0a0c000 fake: commit subject #0                         │"
"└───────────────────────────1 of 1┘│squash 0a0c001 fake: commit subject #1                         │"
"┌[2]─Files────────────────────────┃│drop   0a0c002 fake: commit subject #2                         │"
"│    ▾ /                          ┃│reword 0a0c003 fake: commit subject #3                         │"
"│  ?   notes.txt                  ┃│                                                               │"
"│      ▾ src/                     ││                                                               │"
"└───────────────────────────1 of 5┘│                                                               │"
"┌[3]─Branches─────────────────────┐│                                                               │"
"│  2h * main ↑2                   ││                                                               │"
"│  1d   feature/ui ↑1 ↓3          ││                                                               │"
"│  3w   old/thing                 ││                                                               │"
"└───────────────────────────1 of 3┘│                                                               │"
"┌[4]─Commits──────────────────────┃│                                                               │"
"│0a0c001 TA ◉─╮↑ fake: commit subj││                                                               │"
"│0a0c002 TA ● │ fake: commit subje││                                                               │"
"│0a0c003 TA │ ● fake: commit subje│└─────────────────────────────────────────────────────────3 of 4┘"
"└──────────────────────4 of 100000┘┌[@]─Command log────────────────────────────────────────────────┐"
"┌[5]─Stash────────────────────────┐│                                                               │"
"│stash@{0}: WIP on main           ││                                                               │"
"│                                 ││                                                               │"
"│                                 ││                                                               │"
"└───────────────────────────1 of 1┘└───────────────────────────────────────────────────────────────┘"
"Pick: p | Reword: r | Edit: e | Squash: s | Fixup: f | Drop: d | Move: J/K | Run: <enter> | Cancel: "
