src/snapshots/lazier__app__tests__reflog_window.snap
---
source: src/app.rs
expression: "draw(&app, 100, 30).backend()"
---
"┌[1]─Status───────────────────────┐┌[0]─Changes────────────────────────────────────────────────────┐"
"│main (no upstream) ↑2            ││── Unstaged changes ───────────────────────────────────────────│"
"└───────────────────────────1 of 1┘│diff --git a/src/main.rs b/src/main.rs                         │"
"┌[2]─Files────────────────────────┐│+added line                                                    │"
"│    ▾ /                          ││-removed line                                                  │"
"│  ?   notes.txt                  ││── Staged changes ─────────────────────────────────────────────│"
"│      ▾ src/                     ││diff --git a/src/main.rs b/src/main.rs                         │"
"│  A     app.rs                   ││+staged line                                                   │"
"│ MM     main.rs                  ││                                                               │"
"└───────────────────────────1 of 5┘│                                                               │"
"┌[3]─Branches─────────────────────┐│                                                               │"
"│  2h * main ↑2                   ││                                                               │"
"│  1d   fe┌ Where HEAD has been ─────────────────────────────────────────────────────────┐         │"
"│  3w   ol│a1b2c3d HEAD@{0}       commit: feat: add the thing                            │         │"
"│         │d4e5f6a HEAD@{1}       rebase (finish): returning to refs/heads/main          │         │"
"└─────────│9876543 HEAD@{2}       checkout: moving from main to feature/x                │         │"
"┌[4]─Commi└────────────────────────────────────────────────────────────────────────2 of 3┘         │"
"│0a0c000 TA ●↑ fake: commit subjec││                                                               │"
"│0a0c001 TA ◉─╮↑ fake: commit subj││                                                               │"
"│0a0c002 TA ● │ fake: commit subje│└───────────────────────────────────────────────────────────────┘"
"│0a0c003 TA │ ● fake: commit subje│┌[@]─Command log────────────────────────────────────────────────┐"
"│0a0c004 TA ●─╯ fake: commit subje││                                                               │"
"└──────────────────────1 of 100000┘│                                                               │"
"┌[5]─Stash────────────────────────┐│                                                               │"
"│stash@{0}: WIP on main           ││                                                               │"
"│                                 ││                                                               │"
"│                                 ││                                                               │"
"│                                 ││                                                               │"
"└───────────────────────────1 of 1┘└───────────────────────────────────────────────────────────────┘"
"Move HEAD there: <enter> | Move: j/k | Close: <esc>                                                 "
