src/snapshots/lazier__app__tests__reset_window.snap
---
source: src/app.rs
expression: "draw(&app, 100, 30).backend()"
---
"┌[1]─Status───────────────────────┐┌[0]─Changes────────────────────────────────────────────────────┐"
"│main (no upstream) ↑2            ││── Unstaged changes ───────────────────────────────────────────│"
"└───────────────────────────1 of 1┘│diff --git a/src/main.rs b/src/main.rs                         │"
"┌[2]─Files────────────────────────┐│+added line                                                    │"
"│    ▾ /                          ││-removed line                                                  │"
"│  ?   notes.txt                  ││── Staged changes ─────────────────────────────────────────────│"
"│      ▾ src/                     ││diff --git a/src/main.rs b/src/main.rs                         │"
"│  A     app.rs                   ││+staged line                                                   │"
"│ MM     main.rs                  ││                                                               │"
"└───────────────────────────1 of 5┘│                                                               │"
"┌[3]─Branches──┌ Move HEAD ─────────────────────────────────────────────────────────┐              │"
"│  2h * main ↑2│ 0a0c003 fake: commit subject #3                                    │              │"
"│  1d   feature│                                                                    │              │"
"│  3w   old/thi│ s  soft  your changes wait in the index                            │              │"
"│              │ m  mixed  your changes wait in the work tree                       │              │"
"└──────────────│ h  hard  your changes go away                                      │              │"
"┌[4]─Commits───│                                                                    │              │"
"│0a0c000 TA ●↑ └────────────────────────────────────────────────────────────────────┘              │"
"│0a0c001 TA ◉─╮↑ fake: commit subj││                                                               │"
"│0a0c002 TA ● │ fake: commit subje││                                                               │"
"│0a0c003 TA │ ● fake: commit subje││                                                               │"
"│0a0c004 TA ●─╯ fake: commit subje││                                                               │"
"└──────────────────────1 of 100000┘└───────────────────────────────────────────────────────────────┘"
"┌[5]─Stash────────────────────────┐┌[@]─Command log────────────────────────────────────────────────┐"
"│stash@{0}: WIP on main           ││                                                               │"
"│                                 ││                                                               │"
"│                                 ││                                                               │"
"│                                 ││                                                               │"
"└───────────────────────────1 of 1┘└───────────────────────────────────────────────────────────────┘"
"Keep in the index: s | Keep in the work tree: m | Throw away: h | Cancel: <esc>                     "
