src/snapshots/lazier__app__tests__reword_window.snap
---
source: src/app.rs
expression: "draw(&app, 100, 30).backend()"
---
"┌[1]─Status───────────────────────┐┌[0]─Changes────────────────────────────────────────────────────┐"
"│main (no upstream) ↑2            ││── Unstaged changes ───────────────────────────────────────────│"
"└───────────────────────────1 of 1┘│diff --git a/src/main.rs b/src/main.rs                         │"
"┌[2]─Files────────────────────────┐│+added line                                                    │"
"│    ▾ /                          ││-removed line                                                  │"
"│  ?   notes.txt                  ││── Staged changes ─────────────────────────────────────────────│"
"│      ▾ src/                     ││diff --git a/src/main.rs b/src/main.rs                         │"
"│  A     app.r┌ Reword HEAD ─────────────────────────────────────────────────────────┐             │"
"│ MM     main.│┌summary─────────────────────────────────────────────────────────────┐│             │"
"└─────────────││fix: the old summary▏                                               ││             │"
"┌[3]─Branches─│└────────────────────────────────────────────────────────────────────┘│             │"
"│  2h * main ↑│┌body (optional)─────────────────────────────────────────────────────┐│             │"
"│  1d   featur││                                                                    ││             │"
"│  3w   old/th││                                                                    ││             │"
"│             ││                                                                    ││             │"
"└─────────────││                                                                    ││             │"
"┌[4]─Commits──││                                                                    ││             │"
"│0a0c000 TA ●↑││                                                                    ││             │"
"│0a0c001 TA ◉─│└────────────────────────────────────────────────────────────────────┘│             │"
"│0a0c002 TA ● │reword: enter | body: tab | cancel: esc                               │─────────────┘"
"│0a0c003 TA │ └──────────────────────────────────────────────────────────────────────┘─────────────┐"
"│0a0c004 TA ●─╯ fake: commit subje││                                                               │"
"└──────────────────────1 of 100000┘│                                                               │"
"┌[5]─Stash────────────────────────┐│                                                               │"
"│stash@{0}: WIP on main           ││                                                               │"
"│                                 ││                                                               │"
"│                                 ││                                                               │"
"│                                 ││                                                               │"
"└───────────────────────────1 of 1┘└───────────────────────────────────────────────────────────────┘"
"                                                                                                    "
