src/snapshots/lazier__app__tests__worktree_list.snap
---
source: src/app.rs
expression: "draw(&app, 100, 24).backend()"
---
"┌[1]─Status───────────────────────┐┌[0]─Unstaged changes───────────────────────────────────────────┐"
"│main ↑2                          ││diff --git a/src/main.rs b/src/main.rs                         │"
"└───────────────────────────1 of 1┘│+added line                                                    │"
"┌[2]─Files────────────────────────┃│-removed line                                                  │"
"│ ? notes.txt                     ┃│                                                               │"
"│  ▾ src/                         ┃│                                                               │"
"│ A   app.rs                      ││                                                               │"
"└───────────────────────────1 of 4┘│                                                               │"
"┌[3]─Branches─────────────────────┐│                                                               │"
"│  2h * mai┌ Worktrees ─────────────────────────────────────────────────────────────────┐          │"
"│  1d   fea│● main              /home/max/lazier                                        │          │"
"│  3w   old│  fix/x             /home/max/lazier-fix                                    │          │"
"└──────────└──────────────────────────────────────────────────────────────────────2 of 2┘          │"
"┌[4]─Commits──────────────────────┃│                                                               │"
"│0a0c000 TA ●↑ fake: commit subjec│└───────────────────────────────────────────────────────────────┘"
"│0a0c001 TA ◉─╮↑ fake: commit subj│┌[@]─Command log────────────────────────────────────────────────┐"
"│0a0c002 TA ● │ fake: commit subje││                                                               │"
"└──────────────────────1 of 100000┘│                                                               │"
"┌[5]─Stash────────────────────────┐│                                                               │"
"│stash@{0}: WIP on main           ││                                                               │"
"│                                 ││                                                               │"
"│                                 ││                                                               │"
"└───────────────────────────1 of 1┘└───────────────────────────────────────────────────────────────┘"
"Go to it: <enter> | New: n | Remove: d | Close: <esc>                                               "
