src/snapshots/lazier__app__tests__zoomed_graph.snap
---
source: src/app.rs
expression: "draw(&app, 80, 24).backend()"
---
"┌Commits — enter: back, j/k, ctrl-d/u, g/G─────────────────────────────────────┐"
"│● ↑ 0a0c000 2025-07-20 Test Author      fake: commit subject #0               │"
"│◉─╮ ↑ 0a0c001 2025-07-20 Test Author      fake: commit subject #1             │"
"│● │  0a0c002 2025-07-20 Test Author      fake: commit subject #2              │"
"││ ●  0a0c003 2025-07-20 Test Author      fake: commit subject #3              │"
"│●─╯  0a0c004 2025-07-20 Test Author      fake: commit subject #4              │"
"│●  0a0c005 2025-07-20 Test Author      fake: commit subject #5                │"
"│◉─╮  0a0c006 2025-07-20 Test Author      fake: commit subject #6              │"
"│● │  0a0c007 2025-07-20 Test Author      fake: commit subject #7              │"
"││ ●  0a0c008 2025-07-20 Test Author      fake: commit subject #8              │"
"│●─╯  0a0c009 2025-07-20 Test Author      fake: commit subject #9              │"
"│●  0a0c00a 2025-07-20 Test Author      fake: commit subject #10               │"
"│◉─╮  0a0c00b 2025-07-20 Test Author      fake: commit subject #11             │"
"│● │  0a0c00c 2025-07-20 Test Author      fake: commit subject #12             │"
"││ ●  0a0c00d 2025-07-20 Test Author      fake: commit subject #13             │"
"│●─╯  0a0c00e 2025-07-20 Test Author      fake: commit subject #14             │"
"│●  0a0c00f 2025-07-20 Test Author      fake: commit subject #15               │"
"│◉─╮  0a0c010 2025-07-20 Test Author      fake: commit subject #16             │"
"│● │  0a0c011 2025-07-20 Test Author      fake: commit subject #17             │"
"││ ●  0a0c012 2025-07-20 Test Author      fake: commit subject #18             │"
"│●─╯  0a0c013 2025-07-20 Test Author      fake: commit subject #19             │"
"│●  0a0c014 2025-07-20 Test Author      fake: commit subject #20               │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"enter zoom · g/G top/bottom · ctrl-d/u page · ? help · @ log · q quit           "
